tests/ui/basic/index_non_list.stderr
error: cannot index into `int`
 --> tests/ui/basic/index_non_list.rs:6:10
  |
6 |         x[0]
  |          ^^^
